src/bindings.rs

/* automatically generated by rust-bindgen 0.58.1 */

pub type size_t = ::std::os::raw::c_ulong;
extern "C" {
    pub fn free(__ptr: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn get_mol(
        input: *const ::std::os::raw::c_char,
        mol_sz: *mut size_t,
        details_json: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn get_qmol(
        input: *const ::std::os::raw::c_char,
        mol_sz: *mut size_t,
        details_json: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn get_molblock(
        pkl: *const ::std::os::raw::c_char,
        pkl_sz: size_t,
        details_json: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn get_v3kmolblock(
        pkl: *const ::std::os::raw::c_char,
        pkl_sz: size_t,
        details_json: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn get_smiles(
        pkl: *const ::std::os::raw::c_char,
        pkl_sz: size_t,
        details_json: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn get_smarts(
        pkl: *const ::std::os::raw::c_char,
        pkl_sz: size_t,
        details_json: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn get_cxsmiles(
        pkl: *const ::std::os::raw::c_char,
        pkl_sz: size_t,
        details_json: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn get_json(
        pkl: *const ::std::os::raw::c_char,
        pkl_sz: size_t,
        details_json: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn get_inchi(
        pkl: *const ::std::os::raw::c_char,
        pkl_sz: size_t,
        details_json: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn get_inchikey_for_inchi(
        inchi: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn get_substruct_match(
        mol_pkl: *const ::std::os::raw::c_char,
        mol_pkl_sz: size_t,
        query_pkl: *const ::std::os::raw::c_char,
        query_pkl_sz: size_t,
        options_json: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn get_substruct_matches(
        mol_pkl: *const ::std::os::raw::c_char,
        mol_pkl_sz: size_t,
        query_pkl: *const ::std::os::raw::c_char,
        query_pkl_sz: size_t,
        options_json: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn get_svg(
        pkl: *const ::std::os::raw::c_char,
        pkl_sz: size_t,
        details_json: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn get_descriptors(
        pkl: *const ::std::os::raw::c_char,
        pkl_sz: size_t,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn get_morgan_fp(
        pkl: *const ::std::os::raw::c_char,
        pkl_sz: size_t,
        details_json: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn get_morgan_fp_as_bytes(
        pkl: *const ::std::os::raw::c_char,
        pkl_sz: size_t,
        nbytes: *mut size_t,
        details_json: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn get_rdkit_fp(
        pkl: *const ::std::os::raw::c_char,
        pkl_sz: size_t,
        details_json: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn get_rdkit_fp_as_bytes(
        pkl: *const ::std::os::raw::c_char,
        pkl_sz: size_t,
        nbytes: *mut size_t,
        details_json: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn get_pattern_fp(
        pkl: *const ::std::os::raw::c_char,
        pkl_sz: size_t,
        details_json: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn get_pattern_fp_as_bytes(
        pkl: *const ::std::os::raw::c_char,
        pkl_sz: size_t,
        nbytes: *mut size_t,
        details_json: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn add_hs(
        pkl: *mut *mut ::std::os::raw::c_char,
        pkl_sz: *mut size_t,
    ) -> ::std::os::raw::c_short;
}
extern "C" {
    pub fn remove_all_hs(
        pkl: *mut *mut ::std::os::raw::c_char,
        pkl_sz: *mut size_t,
    ) -> ::std::os::raw::c_short;
}
extern "C" {
    pub fn cleanup(
        pkl: *mut *mut ::std::os::raw::c_char,
        pkl_sz: *mut size_t,
        details_json: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_short;
}
extern "C" {
    pub fn normalize(
        pkl: *mut *mut ::std::os::raw::c_char,
        pkl_sz: *mut size_t,
        details_json: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_short;
}
extern "C" {
    pub fn neutralize(
        pkl: *mut *mut ::std::os::raw::c_char,
        pkl_sz: *mut size_t,
        details_json: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_short;
}
extern "C" {
    pub fn reionize(
        pkl: *mut *mut ::std::os::raw::c_char,
        pkl_sz: *mut size_t,
        details_json: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_short;
}
extern "C" {
    pub fn canonical_tautomer(
        pkl: *mut *mut ::std::os::raw::c_char,
        pkl_sz: *mut size_t,
        details_json: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_short;
}
extern "C" {
    pub fn charge_parent(
        pkl: *mut *mut ::std::os::raw::c_char,
        pkl_sz: *mut size_t,
        details_json: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_short;
}
extern "C" {
    pub fn fragment_parent(
        pkl: *mut *mut ::std::os::raw::c_char,
        pkl_sz: *mut size_t,
        details_json: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_short;
}
extern "C" {
    pub fn prefer_coordgen(val: ::std::os::raw::c_short);
}
extern "C" {
    pub fn set_2d_coords(
        pkl: *mut *mut ::std::os::raw::c_char,
        pkl_sz: *mut size_t,
    ) -> ::std::os::raw::c_short;
}
extern "C" {
    pub fn set_3d_coords(
        pkl: *mut *mut ::std::os::raw::c_char,
        pkl_sz: *mut size_t,
        params_json: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_short;
}
extern "C" {
    pub fn set_2d_coords_aligned(
        pkl: *mut *mut ::std::os::raw::c_char,
        pkl_sz: *mut size_t,
        template_pkl: *const ::std::os::raw::c_char,
        template_sz: size_t,
        details_json: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_short;
}
extern "C" {
    pub fn free_ptr(ptr: *mut ::std::os::raw::c_char);
}
extern "C" {
    pub fn version() -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn enable_logging();
}
extern "C" {
    pub fn disable_logging();
}
